fixed spacing

--- a/UlricTodman.com/src/components/BusinessCard/BusinessCard.css
+++ b/UlricTodman.com/src/components/BusinessCard/BusinessCard.css
@@ -73,32 +73,6 @@ button {
 
 }
 
-a.url {
-    display: block;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 150%;
-    text-decoration: none;
-    /* identical to box height, or 15px */
-    color: #F5F5F5;
-    text-align: center;
-
-}
-
-a.url:hover {
-
-    text-decoration: underline;
-
-
-}
-
-
-
-
-
-
 
 
 
