--- a/UlricTodman.com/src/components/BusinessCard/Profile/ProfileSection.css
+++ b/UlricTodman.com/src/components/BusinessCard/Profile/ProfileSection.css
@@ -10,9 +10,30 @@
 
 }
 
+a.url {
+    display: block;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 150%;
+    text-decoration: none;
+    /* identical to box height, or 15px */
+    color: #F5F5F5;
+    text-align: center;
+    margin-bottom: 0;
+
+}
+
+a.url:hover {
+
+    text-decoration: underline;
+
+
+}
+
 .mail {
     /* Button */
-    margin-top: 15px;
 
 
     box-sizing: border-box;
@@ -79,7 +100,6 @@
 
 .mail-primary {
     /* Button */
-    margin-top: 15px;
 
 
     box-sizing: border-box;
@@ -185,7 +205,7 @@ a{
     flex: none;
     order: 1;
     flex-grow: 0;
-    margin: 15px 35px 33px 17px;
+    margin: 0 35px 33px 17px;
 }
 
 
